css/style.css
/*
  Minor Second Modular Scale:
  https://www.modularscale.com/?1&em&1.067
*/
/*
  Color Scheme by Color Hunt
  https://colorhunt.co/palette/166646
*/
/* Navbar container */

.navbar {
  overflow: hidden;
  background-color: #000000;
  font-family: "Times New Roman", Times, serif;
  list-style-type: none;
  width:100%;
 

}

.navbar2 {
  overflow: hidden;
  background-color: #eb8242;
  font-family: "Times New Roman", Times, serif;
}

/* Links inside navbar */
.navbar a { 
  float: left;
  font-size: 1.296em;
  color: white;
  text-align: center;
  text-decoration: none;
  padding: 14px 16px;
}

.navbar2 a { 
  float: left;
  font-size: 1.296em;
  color: white;
  text-align: center;
  text-decoration: none;
  padding: 14px 16px;
}

/* Dropdown container */
.dropdown {
  float: left;
  overflow: hidden;
  background-color: #000000;
}

/* Dropdown button */
.dropdown .dropbtn {
  font-size: 1.296em;
  border: none;
  outline: none;
  color: white;
  padding: 14px 16px;
  background-color: inherit;
  font-family: inherit;
  margin: 0;
}

/* Added hover confirmation */
.navbar a:hover, .dropdown:hover .dropbtn {
  background-color: #da2d2d;
}

.navbar2 a:hover, .dropdown:hover .dropbtn {
  background-color: #da2d2d;
}



/* Dropdown content */
.dropdown-content {
  display: none;
  position: absolute;
  background-color: #000000;
  min-width: 160px;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index: 1;
}

/* Links inside the dropdown */
.dropdown-content a {
  float: none;
  color: white;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
  text-align: left;
}

/* Added hover confirmation */
.dropdown-content a:hover {
  background-color: #da2d2d;
}

/* Show dropdown menu on hover */
.dropdown:hover .dropdown-content {
  display: block;
}  

/* heading 1 css */
h { 
  text-align: center;
  color: #000000;
  font-family: "Times New Roman", Times, serif;
}

h1 {
  text-align: center;
  color: #000000;
  font-family: "Times New Roman", Times, serif;
}

/* heading 2 css */
h2 {
  text-align: center;
  color: #000000;
  font-family: "Times New Roman", Times, serif;
}

#HeaderForm {
  font-family : "Diplomata SC", "Ewert", cursive;
  color: #9d0b0b;
}

#OrderLineCount {
  color: #9d0b0b;
}

#indexh1 {
  color: #ad8e0d;
}  

#indexh2 {
  color: #ad8e0d;
}

#Tutorh1 {
  color: #ad8e0d;
}

#Tutorh2 {
  color: #ad8e0d;
}

#Tutorh3 {
  color: #ad8e0d;
}

#Tutorh4 {
  color: #ad8e0d;
}
	
	
body {
  background: url('https://raw.githubusercontent.com/ITMD-362-Fall-2019-Project-2/Project-2/master/media/grass_under_sky.jpg');
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center center;  
}

p {
  color: #9d0b0b;
  text-align: center;
  font-family : "Diplomata SC", "Ewert", cursive;
}

  fieldset{
    background-color: #bfa443
}

  #title {
    padding: .5em .5em .2em .5em;
	margin: .5em .5em .2em .5em;
	text-align: center;
	font-size:0.878em; 
	font-family: "Diplomata SC", "Ewert", cursive;
}

  label {
	color: #9d0b0b;
	display: block;
	text-align: center;
	font-size:1.215em;
	font-family : "Diplomata SC", "Ewert", cursive;
}

#deev {
  text-align: center;
}

  input {
	width : 45%;
	text-align: center;
	border-radius: .5em;
	border: solid #000000;
}
  
  #butt {
	color: #9d0b0b;
	margin-bottom: .5em;
	text-align: center;
	font-size : 1.383em;
	font-family : "Diplomata SC", "Ewert", cursive;
}
  
  input [type="text"] {
	font-size : 1.138em;
	font-family : "Diplomata SC", "Ewert", cursive;
}
  
  input [type="email"] {
    font-size : 1.383em;
	font-family : "Diplomata SC", "Ewert", cursive;
}

  input [type="number"] {
	font-size : 1.383em;
	font-family : "Diplomata SC", "Ewert", cursive;
}
  img {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 50%;
}


  #link {
    text-align: center;
}






@media screen and (min-width: 259px) {
body {
  font-size: 1.913em;
}

.navbar {
overflow: hidden;
background-color: #000000;
font-family: "Times New Roman", Times, serif;
list-style-type: none;
width: 234.5px;
padding-left: 30%;
padding-right: 32%;
text-align: center;
}
}

@media only screen and (min-width: 596px) {
body {
font-size: 2.178em;
}

.navbar {
overflow: hidden;
background-color: #000000;
font-family: "Times New Roman", Times, serif;
list-style-type: none;
width: 234.5px;
padding-left: 40%;
padding-right: 40%;
text-align: center;
}
}
@media only screen and (min-width: 1110px) {  
.navbar {
  overflow: hidden;
  background-color: #000000;
  font-family: "Times New Roman", Times, serif;
  width:100%;
  padding: 0%;
}
}

  
  
  
  

